<resources>
    <!-- appName. -->
    <string name="app_name">AddLit</string>
    <!-- admin. -->
    <string name="admin">admin</string>
    <!-- user. -->
    <string name="user">user</string>


    <!-- btnText. -->
    <string name="btn_registration_text">Зарегистрироваться</string>
    <string name="btn_text_delete">Удалить</string>
    <string name="btn_text_assign">Назначить</string>
    <string name="btn_text_read">Читать</string>
    <string name="send_news_btn_text">Предложить новость</string>
    <string name="send_error_btn_text">Сообщить об ошибке</string>
    <string name="btn_text_auth">Войти</string>

    <!-- textView. -->
    <string name="about_us_text_view">О нас</string>
    <string name="addLit_text_view">Приложение AddLit создано для студентов Московского приборостороительного техникума им. Плеханова. Приложение обеспечивать студентов необходимой необязательной литературой по профильным предметам.</string>
    <string name="addLit_protection_text_view">AddLit все права защищены.</string>
    <string name="auth_text_view">Авторизация</string>
    <string name="registration_now_text_view">Зарегистрируйтесь сейчас!</string>
    <string name="registration_text_view">Регистрация</string>
    <string name="auth_restore_password_text_view">Восстановить пароль</string>
    <string name="course_subject_text_view">Интересующие предметы</string>


    <!-- hint. -->
    <string name="email_text">E-mail</string>
    <string name="password_text">Пароль</string>
    <string name="name_text">Имя</string>
    <string name="course_text">Курс</string>

    <!-- toast. -->
    <string name="email_edt_text_not_filled">Поле Email не заполнено</string>
    <string name="password_edt_text_not_filled">Поле Пароль не заполнено</string>
    <string name="name_edt_text_not_filled">Поле Имя не заполнено</string>
    <string name="course_edt_text_not_filled">Поле Курс не заполнено</string>
    <string name="password_reset_message_sent">Сообщение для сброса пароля отправлено</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="registration_user_toast">Пользователь зарегистрирован!</string>
    <string name="Describe_error">Опишите ошибку</string>
    <string name="error_send_toast">Ошибка отправлена!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_send_toast">Новость отправлена!</string>
    <string name="url_news_edt_text_not_field">Поле Ссылка на новость не заполнено</string>
    <string name="title_news_edt_text_not_field">Поле Заголовок новости не заполнено</string>
    <string name="text_news_edt_text_not_field">Поле Текс новости не заполнено</string>
    <string name="error_send_edt_text_not_field">Поле Описание ошибки не заполнено</string>
    <string name="btn_text_publish">Опубликовать</string>
</resources>